- Implemented user logon with Spring Security - Implemented conference overview / index page - Implemented user pages

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -22,10 +22,10 @@ default.boolean.false=False
 default.date.format=yyyy-MM-dd HH:mm:ss z
 default.number.format=0
 
-default.created.message={0} {1} created
-default.updated.message={0} {1} updated
-default.deleted.message={0} {1} deleted
-default.not.deleted.message={0} {1} could not be deleted
+default.created.message={0} is created
+default.updated.message={0} is updated
+default.deleted.message={0} is deleted
+default.not.deleted.message={0} could not be deleted
 default.not.found.message={0} not found with id {1}
 default.optimistic.locking.failure=Another user has updated this {0} while you were editing
 
@@ -53,3 +53,59 @@ typeMismatch.java.lang.Long=Property {0} must be a valid number
 typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
+
+spinner.alt=Loading...
+
+## Security related messages
+# Login errors
+springSecurity.errors.login.expired=Sorry, your account has expired.
+springSecurity.errors.login.passwordExpired=Sorry, your password has expired.
+springSecurity.errors.login.disabled=Sorry, your account is disabled.
+springSecurity.errors.login.locked=Sorry, your account is locked.
+springSecurity.errors.login.fail=Sorry, we were not able to find a user with that login and password.
+
+# Login Page
+springSecurity.login.title=Login
+springSecurity.login.header=Please Login
+springSecurity.login.button=Login
+springSecurity.login.username.label=Login
+springSecurity.login.password.label=Password
+springSecurity.login.reset=Lost password (reset)
+springSecurity.login.remember.me.label=Remember me
+
+# Forgot password page
+springSecurity.forgot.title=Forgot password
+springSecurity.forgot.header=Request a new password
+springSecurity.forgot.button=New password
+springSecurity.forgot.username.label=Login
+springSecurity.forgot.error=Sorry, we couldn't create a new password for you at this moment.
+springSecurity.forgot.fail=Sorry. we were not able to find a user with that login.
+springSecurity.forgot.success=A new password has been send to you by mail.
+
+# Denied Page
+springSecurity.denied.title=Denied
+springSecurity.denied.message=Sorry, you're not authorized to view this page.
+
+#Logged in
+springSecurity.loggedin.welcome=Welcome {0}
+
+# Menu related messages
+menu.personalpage=Personal page
+menu.usersoverview=Users overview
+menu.logout=Log out
+
+# Conference related messages
+conference.label=Conference
+conference.list=Available conferences
+conference.events=Events
+
+# User related messages
+user.label=User
+user.email.label=Email
+user.fullName.label=Full Name
+user.institute.label=Institute
+user.country.label=Country
+user.language.label=Language
+user.encryptedPassword.label=Password
+user.encryptedPasswordAgain.label=Password again
+user.password.nomatch=The passwords are not equal.
