--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -22,10 +22,10 @@ default.boolean.false=Nee
 default.date.format=dd-MM-yyyy HH:mm:ss z
 default.number.format=0
 
-default.created.message={0} {1} ingevoerd
-default.updated.message={0} {1} gewijzigd
-default.deleted.message={0} {1} verwijderd
-default.not.deleted.message={0} {1} kon niet worden verwijderd
+default.created.message={0} is ingevoerd
+default.updated.message={0} is gewijzigd
+default.deleted.message={0} is verwijderd
+default.not.deleted.message={0} kon niet worden verwijderd
 default.not.found.message={0} met id {1} kon niet worden gevonden
 default.optimistic.locking.failure=Een andere gebruiker heeft deze {0} al gewijzigd
 
@@ -53,3 +53,57 @@ typeMismatch.java.lang.Long=Attribuut {0} is geen geldig nummer
 typeMismatch.java.lang.Short=Attribuut {0} is geen geldig nummer
 typeMismatch.java.math.BigDecimal=Attribuut {0} is geen geldig nummer
 typeMismatch.java.math.BigInteger=Attribuut {0} is geen geldig nummer
+
+## Security related messages
+# Login errors
+springSecurity.errors.login.expired=Sorry, your account has expired.
+springSecurity.errors.login.passwordExpired=Sorry, your password has expired.
+springSecurity.errors.login.disabled=Sorry, uw account is disabled.
+springSecurity.errors.login.locked=Sorry, uw account is gesloten.
+springSecurity.errors.login.fail=Sorry, we konden geen gebruiker vinden met deze login/password combinatie.
+
+# Login Page
+springSecurity.login.title=Login
+springSecurity.login.header=Login astublieft
+springSecurity.login.button=Login
+springSecurity.login.username.label=Login
+springSecurity.login.password.label=Wachtwoord
+springSecurity.login.reset=Wachtwoord vergeten (reset)
+springSecurity.login.remember.me.label=Remember me
+
+# Forgot password page
+springSecurity.forgot.title=Wachtwoord vergeten
+springSecurity.forgot.header=Een nieuw wachtwoord aanvragen
+springSecurity.forgot.button=Nieuw wachtwoord
+springSecurity.forgot.username.label=Login
+springSecurity.forgot.error=Sorry, we konden geen nieuw wachtwoord voor u aanmaken op dit moment.
+springSecurity.forgot.fail=Sorry, we konden geen gebruiker vinden met deze login.
+springSecurity.forgot.success=Een nieuw wachtwoord is naar u gemaild.
+
+# Denied Page
+springSecurity.denied.title=Geen toegang
+springSecurity.denied.message=Sorry, u heeft geen toegang tot deze pagina.
+
+#Logged in
+springSecurity.loggedin.welcome=Welkom {0}
+
+# Menu related messages
+menu.personalpage=Persoonlijke pagina
+menu.usersoverview=Gebruikers overzicht
+menu.logout=Uitloggen
+
+# Conference related messages
+conference.label=Congres
+conference.list=Beschikbare Congressen
+conference.events=Evenementen
+
+# User related messages
+user.label=Gebruiker
+user.email.label=Email
+user.fullName.label=Volledige naam
+user.institute.label=Instituut
+user.country.label=Land
+user.language.label=Taal
+user.encryptedPassword.label=Wachtwoord
+user.encryptedPasswordAgain.label=Wachtwoord nogmaals
+user.password.nomatch=The wachtwoorden zijn niet hetzelfde.
