Implementation of dynamic pages functionality and exportation of data

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -19,7 +19,7 @@ default.paginate.prev=Previous
 default.paginate.next=Next
 default.boolean.true=True
 default.boolean.false=False
-default.date.format=yyyy-MM-dd HH:mm:ss z
+default.date.format=MMMMM d yyyy
 default.number.format=0
 
 default.created.message={0} is created
@@ -28,19 +28,26 @@ default.deleted.message={0} is deleted
 default.not.deleted.message={0} could not be deleted
 default.not.found.message={0} not found with id {1}
 default.optimistic.locking.failure=Another user has updated this {0} while you were editing
+default.successful.message=Saving was successful!
 
 default.home.label=Home
 default.list.label={0} List
-default.add.label=Add {0}
+default.add.label=Add new {0}
 default.new.label=New {0}
 default.create.label=Create {0}
 default.show.label=Show {0}
 default.edit.label=Edit {0}
 
+default.enabled.label=Visible
+default.deleted.label=Delete
+
 default.button.create.label=Create
 default.button.edit.label=Edit
 default.button.update.label=Update
+default.button.save.label=Save
+default.button.cancel.label=Cancel
 default.button.delete.label=Delete
+default.button.back.label=Back
 default.button.delete.confirm.message=Are you sure?
 
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
@@ -94,10 +101,26 @@ menu.personalpage=Personal page
 menu.usersoverview=Users overview
 menu.logout=Log out
 
-# Conference related messages
-conference.label=Conference
-conference.list=Available conferences
-conference.events=Events
+# Event related messages
+event.label=Event
+event.list=Available events
+event.dates=Event dates
+event.code.label=Code
+event.shortname.label=Short name
+event.longname.label=Long name
+event.type.label=Type
+event.dates.label=Event dates
+
+# Event date related messages
+eventdate.label=Event Date
+eventdate.event.label=Event
+eventdate.yearcode.label=Year code
+eventdate.startdate.label=Start date
+eventdate.enddate.label=End date
+eventdate.dateastext.label=Date as text
+eventdate.description.label=Description
+eventdate.longdescription.label=Long description
+eventdate.days.label=Days
 
 # User related messages
 user.label=User
@@ -106,6 +129,15 @@ user.fullName.label=Full Name
 user.institute.label=Institute
 user.country.label=Country
 user.language.label=Language
-user.encryptedPassword.label=Password
+user.password.label=Password
 user.encryptedPasswordAgain.label=Password again
 user.password.nomatch=The passwords are not equal.
+
+# Network related messages
+network.label=Network
+network.date.label=Event date
+network.name.label=Name
+network.connecttext.label=Connect text
+network.showonline.label=Show online
+network.showintern.label=Show intern
+network.expoit.label=Expoit
