--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -19,7 +19,7 @@ default.paginate.prev=Vorige
 default.paginate.next=Volgende
 default.boolean.true=Ja
 default.boolean.false=Nee
-default.date.format=dd-MM-yyyy HH:mm:ss z
+default.date.format=d MMMMM yyyy
 default.number.format=0
 
 default.created.message={0} is ingevoerd
@@ -28,19 +28,26 @@ default.deleted.message={0} is verwijderd
 default.not.deleted.message={0} kon niet worden verwijderd
 default.not.found.message={0} met id {1} kon niet worden gevonden
 default.optimistic.locking.failure=Een andere gebruiker heeft deze {0} al gewijzigd
+default.successful.message=Opslaan was succesvol!
 
 default.home.label=Home
 default.list.label={0} Overzicht
-default.add.label=Toevoegen {0}
+default.add.label=Voeg {0} toe
 default.new.label=Invoeren {0}
 default.create.label=Invoeren {0}
 default.show.label=Details {0}
-default.edit.label=Wijzigen {0}
+default.edit.label=Wijzig {0}
+
+default.enabled.label=Zichtbaar
+default.deleted.label=Verwijderen
 
 default.button.create.label=Invoeren
 default.button.edit.label=Wijzigen
-default.button.update.label=Opslaan
+default.button.update.label=Update
 default.button.delete.label=Verwijderen
+default.button.save.label=Opslaan
+default.button.cancel.label=Annuleren
+default.button.back.label=Terug
 default.button.delete.confirm.message=Weet je het zeker?
 
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
@@ -92,10 +99,26 @@ menu.personalpage=Persoonlijke pagina
 menu.usersoverview=Gebruikers overzicht
 menu.logout=Uitloggen
 
-# Conference related messages
-conference.label=Congres
-conference.list=Beschikbare Congressen
-conference.events=Evenementen
+# Event related messages
+event.label=Evenement
+event.list=Beschikbare evenementen
+event.dates=Evenement data
+event.code.label=Code
+event.shortname.label=Korte naam
+event.longname.label=Lange naam
+event.type.label=Type
+event.dates.label=Evenement data
+
+# Event date related messages
+eventdate.label=Evenement datum
+eventdate.event.label=Evenement
+eventdate.yearcode.label=Jaar code
+eventdate.startdate.label=Start datum
+eventdate.enddate.label=Eind datum
+eventdate.dateastext.label=Datum als tekst
+eventdate.description.label=Beschrijving
+eventdate.longdescription.label=Lange beschrijving
+eventdate.days.label=Dagen
 
 # User related messages
 user.label=Gebruiker
@@ -104,6 +127,15 @@ user.fullName.label=Volledige naam
 user.institute.label=Instituut
 user.country.label=Land
 user.language.label=Taal
-user.encryptedPassword.label=Wachtwoord
+user.password.label=Wachtwoord
 user.encryptedPasswordAgain.label=Wachtwoord nogmaals
 user.password.nomatch=The wachtwoorden zijn niet hetzelfde.
+
+# Network related messages
+network.label=Netwerk
+network.date.label=Evenement datum
+network.name.label=Naam
+network.connecttext.label=Verbindings tekst
+network.showonline.label=Online weergeven
+network.showintern.label=Intern weergeven
+network.expoit.label=Expoit
