Some changes to the dynamic page renderer

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -31,12 +31,13 @@ default.optimistic.locking.failure=Another user has updated this {0} while you w
 default.successful.message=Saving was successful!
 
 default.home.label=Home
-default.list.label={0} List
+default.list.label={0} list
 default.add.label=Add new {0}
 default.new.label=New {0}
 default.create.label=Create {0}
 default.show.label=Show {0}
 default.edit.label=Edit {0}
+default.overview.label={0} overview
 
 default.enabled.label=Visible
 default.deleted.label=Delete
@@ -101,27 +102,6 @@ menu.personalpage=Personal page
 menu.usersoverview=Users overview
 menu.logout=Log out
 
-# Event related messages
-event.label=Event
-event.list=Available events
-event.dates=Event dates
-event.code.label=Code
-event.shortname.label=Short name
-event.longname.label=Long name
-event.type.label=Type
-event.dates.label=Event dates
-
-# Event date related messages
-eventdate.label=Event Date
-eventdate.event.label=Event
-eventdate.yearcode.label=Year code
-eventdate.startdate.label=Start date
-eventdate.enddate.label=End date
-eventdate.dateastext.label=Date as text
-eventdate.description.label=Description
-eventdate.longdescription.label=Long description
-eventdate.days.label=Days
-
 # User related messages
 user.label=User
 user.email.label=Email
@@ -133,11 +113,40 @@ user.password.label=Password
 user.encryptedPasswordAgain.label=Password again
 user.password.nomatch=The passwords are not equal.
 
+# Event related messages
+event.label=Event
+event.multiple.label=Events
+event.code.label=Code
+event.shortname.label=Short name
+event.longname.label=Long name
+event.type.label=Type
+
+# Event date related messages
+eventdate.label=Event date
+eventdate.multiple.label=Dates
+eventdate.yearcode.label=Year code
+eventdate.startdate.label=Start date
+eventdate.enddate.label=End date
+eventdate.dateastext.label=Date as text
+eventdate.description.label=Description
+eventdate.longdescription.label=Long description
+
+# Day related messages
+day.label=Day
+day.multiple.label=Days
+day.day.label=Day
+day.dayNumber.label=Day number
+
 # Network related messages
 network.label=Network
-network.date.label=Event date
+netwrok.multiple.label=Networks
 network.name.label=Name
-network.connecttext.label=Connect text
+network.comment.label=Comment
 network.showonline.label=Show online
-network.showintern.label=Show intern
-network.expoit.label=Expoit
+network.showintern.label=Show internal
+
+# Title related messages
+title.label=Title
+title.multiple.label=Titles
+title.title.label=Title
+
