--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -31,12 +31,13 @@ default.optimistic.locking.failure=Een andere gebruiker heeft deze {0} al gewijz
 default.successful.message=Opslaan was succesvol!
 
 default.home.label=Home
-default.list.label={0} Overzicht
+default.list.label={0} lijst
 default.add.label=Voeg {0} toe
 default.new.label=Invoeren {0}
 default.create.label=Invoeren {0}
 default.show.label=Details {0}
 default.edit.label=Wijzig {0}
+default.overview.label={0} overzicht
 
 default.enabled.label=Zichtbaar
 default.deleted.label=Verwijderen
@@ -99,27 +100,6 @@ menu.personalpage=Persoonlijke pagina
 menu.usersoverview=Gebruikers overzicht
 menu.logout=Uitloggen
 
-# Event related messages
-event.label=Evenement
-event.list=Beschikbare evenementen
-event.dates=Evenement data
-event.code.label=Code
-event.shortname.label=Korte naam
-event.longname.label=Lange naam
-event.type.label=Type
-event.dates.label=Evenement data
-
-# Event date related messages
-eventdate.label=Evenement datum
-eventdate.event.label=Evenement
-eventdate.yearcode.label=Jaar code
-eventdate.startdate.label=Start datum
-eventdate.enddate.label=Eind datum
-eventdate.dateastext.label=Datum als tekst
-eventdate.description.label=Beschrijving
-eventdate.longdescription.label=Lange beschrijving
-eventdate.days.label=Dagen
-
 # User related messages
 user.label=Gebruiker
 user.email.label=Email
@@ -131,11 +111,41 @@ user.password.label=Wachtwoord
 user.encryptedPasswordAgain.label=Wachtwoord nogmaals
 user.password.nomatch=The wachtwoorden zijn niet hetzelfde.
 
+# Event related messages
+event.label=Evenement
+event.multiple.label=Evenementen
+event.list=Beschikbare evenementen
+event.code.label=Code
+event.shortname.label=Korte naam
+event.longname.label=Lange naam
+event.type.label=Type
+
+# Event date related messages
+eventdate.label=Evenement datum
+eventdate.multiple.label=Data
+eventdate.yearcode.label=Jaar code
+eventdate.startdate.label=Start datum
+eventdate.enddate.label=Eind datum
+eventdate.dateastext.label=Datum als tekst
+eventdate.description.label=Beschrijving
+eventdate.longdescription.label=Lange beschrijving
+
+# Day related messages
+day.label=Dag
+day.multiple.label=Dagen
+day.day.label=Dag
+day.dayNumber.label=Dag nummer
+
 # Network related messages
 network.label=Netwerk
-network.date.label=Evenement datum
+netwrok.multiple.label=Netwerken
 network.name.label=Naam
-network.connecttext.label=Verbindings tekst
+network.comment.label=Commentaar
 network.showonline.label=Online weergeven
 network.showintern.label=Intern weergeven
-network.expoit.label=Expoit
+
+# Title related messages
+title.label=Titel
+title.multiple.label=Titels
+title.title.label=Titel
+
