Changes to the dynamic page renderer (ongoing) to deal with domain relations and started applying layout of previous application

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -135,7 +135,7 @@ eventdate.longdescription.label=Long description
 day.label=Day
 day.multiple.label=Days
 day.day.label=Day
-day.dayNumber.label=Day number
+day.daynumber.label=Day number
 
 # Network related messages
 network.label=Network
@@ -149,4 +149,19 @@ network.showintern.label=Show internal
 title.label=Title
 title.multiple.label=Titles
 title.title.label=Title
+
+# Room related messages
+room.label=Room
+room.multiple.label=Rooms
+room.roomname.label=Room name
+room.roomnumber.label=Room number
+room.noofseats.label=Number of seats
+room.comments.label=Comments
+
+# Equipment related messages
+equipment.label=Equipment
+equipment.multiple.label=Equipment
+equipment.equipment.label=Equipment
+equipment.description.label=Description
+equipment.imageurl.label=Image URL
 
