--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -134,7 +134,7 @@ eventdate.longdescription.label=Lange beschrijving
 day.label=Dag
 day.multiple.label=Dagen
 day.day.label=Dag
-day.dayNumber.label=Dag nummer
+day.daynumber.label=Dag nummer
 
 # Network related messages
 network.label=Netwerk
@@ -149,3 +149,17 @@ title.label=Titel
 title.multiple.label=Titels
 title.title.label=Titel
 
+# Room related messages
+room.label=Kamer
+room.multiple.label=Kamers
+room.roomname.label=Kamer naam
+room.roomnumber.label=Kamer nummer
+room.noofseats.label=Aantal plaatsen
+room.comments.label=Commentaar
+
+# Equipment related messages
+equipment.label=Apparatuur
+equipment.multiple.label=Apparatuur
+equipment.equipment.label=Apparatuur
+equipment.description.label=Beschrijving
+equipment.imageurl.label=Afbeelding URL
