Changes made to the dynamic pages functionality to make it possible to add multiple instances of one domain class to another domain class.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -104,6 +104,7 @@ menu.logout=Log out
 
 # User related messages
 user.label=User
+user.multiple.label=Users
 user.email.label=Email
 user.fullName.label=Full Name
 user.institute.label=Institute
@@ -142,8 +143,10 @@ network.label=Network
 netwrok.multiple.label=Networks
 network.name.label=Name
 network.comment.label=Comment
+network.url.label=URL
 network.showonline.label=Show online
-network.showintern.label=Show internal
+network.showinternal.label=Show internal
+network.chairs.label=Chairs
 
 # Title related messages
 title.label=Title
@@ -156,7 +159,7 @@ room.multiple.label=Rooms
 room.roomname.label=Room name
 room.roomnumber.label=Room number
 room.noofseats.label=Number of seats
-room.comments.label=Comments
+room.comment.label=Comments
 
 # Equipment related messages
 equipment.label=Equipment
