--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -102,6 +102,7 @@ menu.logout=Uitloggen
 
 # User related messages
 user.label=Gebruiker
+user.multiple.label=Gebruikers
 user.email.label=Email
 user.fullName.label=Volledige naam
 user.institute.label=Instituut
@@ -141,8 +142,10 @@ network.label=Netwerk
 netwrok.multiple.label=Netwerken
 network.name.label=Naam
 network.comment.label=Commentaar
+network.url.label=URL
 network.showonline.label=Online weergeven
-network.showintern.label=Intern weergeven
+network.showinternal.label=Intern weergeven
+network.chairs.label=Chairs
 
 # Title related messages
 title.label=Titel
@@ -155,7 +158,7 @@ room.multiple.label=Kamers
 room.roomname.label=Kamer naam
 room.roomnumber.label=Kamer nummer
 room.noofseats.label=Aantal plaatsen
-room.comments.label=Commentaar
+room.comment.label=Commentaar
 
 # Equipment related messages
 equipment.label=Apparatuur
