Dynamic page structure change

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -140,13 +140,17 @@ day.daynumber.label=Day number
 
 # Network related messages
 network.label=Network
-netwrok.multiple.label=Networks
+network.multiple.label=Networks
 network.name.label=Name
 network.comment.label=Comment
 network.url.label=URL
 network.showonline.label=Show online
 network.showinternal.label=Show internal
 network.chairs.label=Chairs
+
+# Network chair related messages
+networkchair.chair.label=Chair
+networkchair.ismainchair.label=Main chair
 
 # Title related messages
 title.label=Title
