--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -139,13 +139,17 @@ day.daynumber.label=Dag nummer
 
 # Network related messages
 network.label=Netwerk
-netwrok.multiple.label=Netwerken
+network.multiple.label=Netwerken
 network.name.label=Naam
 network.comment.label=Commentaar
 network.url.label=URL
 network.showonline.label=Online weergeven
 network.showinternal.label=Intern weergeven
 network.chairs.label=Chairs
+
+# Network chair related messages
+networkchair.chair.label=Chair
+networkchair.ismainchair.label=Hoofd chair
 
 # Title related messages
 title.label=Titel
