Expanded room creation/update with equipment and session date/time information and started with the event date tenant implementation

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -31,6 +31,7 @@ default.optimistic.locking.failure=Another user has updated this {0} while you w
 default.successful.message=Saving was successful!
 
 default.home.label=Home
+default.welcome.label=Welcome
 default.list.label={0} list
 default.add.label=Add new {0}
 default.new.label=New {0}
@@ -49,6 +50,7 @@ default.button.save.label=Save
 default.button.cancel.label=Cancel
 default.button.delete.label=Delete
 default.button.back.label=Back
+default.button.selectall.label=Select all
 default.button.delete.confirm.message=Are you sure?
 
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
