--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -31,6 +31,7 @@ default.optimistic.locking.failure=Een andere gebruiker heeft deze {0} al gewijz
 default.successful.message=Opslaan was succesvol!
 
 default.home.label=Home
+default.welcome.label=Welkom
 default.list.label={0} lijst
 default.add.label=Voeg {0} toe
 default.new.label=Invoeren {0}
@@ -49,6 +50,7 @@ default.button.delete.label=Verwijderen
 default.button.save.label=Opslaan
 default.button.cancel.label=Annuleren
 default.button.back.label=Terug
+default.button.selectall.label=Selecteer alles
 default.button.delete.confirm.message=Weet je het zeker?
 
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
