Tenant implementation and fee create/update pages

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -181,3 +181,18 @@ session.multiple.label=Sessions
 session.code.label=Code
 session.name.label=Name
 session.comment.label=Comment
+
+# Fee state related messages
+feestate.label=Fee state
+feestate.multiple.label=Fee states
+feestate.name.label=Name
+feestate.isdefaultfee.label=Is default fee
+
+# Fee amount related messages
+feeamount.label=Fee amount
+feeamount.multiple.label=Fee amounts
+feeamount.enddate.label=End date
+feeamount.numdaysstart.label=Nr of days start
+feeamount.numdaysend.label=Nr of days end
+feeamount.numdays.label=Nr of days
+feeamount.feeamount.label=Fee amount
