--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -180,3 +180,18 @@ session.multiple.label=Sessies
 session.code.label=Code
 session.name.label=Naam
 session.comment.label=Commentaar
+
+# Fee state related messages
+feestate.label=Inschrijvings status
+feestate.multiple.label=Inschrijvings statussen
+feestate.name.label=Naam
+feestate.isdefaultfee.label=Is standaard inschrijving
+
+# Fee amount related messages
+feeamount.label=Inschrijvings bedrag
+feeamount.multiple.label=Inschrijvings bedragen
+feeamount.enddate.label=Eind datum
+feeamount.numdaysstart.label=Aantal dagen start
+feeamount.numdaysend.label=Aantal dagen eind
+feeamount.numdays.label=Aantal dagen
+feeamount.feeamount.label=Inschrijvings bedrag
