Participant list and part of participant overview created

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -33,6 +33,7 @@ default.successful.message=Saving was successful!
 
 default.home.label=Home
 default.welcome.label=Welcome
+default.all.label=All
 default.list.label={0} list
 default.add.label=Add new {0}
 default.new.label=New {0}
@@ -51,6 +52,8 @@ default.button.save.label=Save
 default.button.cancel.label=Cancel
 default.button.delete.label=Delete
 default.button.back.label=Back
+default.button.search.label=Search
+default.button.searchin.label=Search in
 default.button.selectall.label=Select all
 default.button.delete.confirm.message=Are you sure?
 
@@ -104,6 +107,11 @@ springSecurity.loggedin.welcome=Welcome {0}
 menu.personalpage=Personal page
 menu.usersoverview=Users overview
 menu.logout=Log out
+
+#Search related messages
+search.for.organisation=Organisation
+search.for.name=Name
+search.for.address=Address
 
 # User related messages
 user.label=User
@@ -196,3 +204,8 @@ feeamount.numdaysstart.label=Nr of days start
 feeamount.numdaysend.label=Nr of days end
 feeamount.numdays.label=Nr of days
 feeamount.feeamount.label=Fee amount
+
+# Participant state related messages
+participantstate.label=Participant state
+participantstate.multiple.label=Participant states
+participantstate.state.label=State
