--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -33,6 +33,7 @@ default.successful.message=Opslaan was succesvol!
 
 default.home.label=Home
 default.welcome.label=Welkom
+default.all.label=All
 default.list.label={0} lijst
 default.add.label=Voeg {0} toe
 default.new.label=Invoeren {0}
@@ -51,6 +52,8 @@ default.button.delete.label=Verwijderen
 default.button.save.label=Opslaan
 default.button.cancel.label=Annuleren
 default.button.back.label=Terug
+default.button.search.label=Zoeken
+default.button.searchin.label=Zoek in
 default.button.selectall.label=Selecteer alles
 default.button.delete.confirm.message=Weet je het zeker?
 
@@ -182,16 +185,21 @@ session.name.label=Naam
 session.comment.label=Commentaar
 
 # Fee state related messages
-feestate.label=Inschrijvings status
-feestate.multiple.label=Inschrijvings statussen
+feestate.label=Vergoedings status
+feestate.multiple.label=Vergoedings statussen
 feestate.name.label=Naam
-feestate.isdefaultfee.label=Is standaard inschrijving
+feestate.isdefaultfee.label=Is standaard vergoeding
 
 # Fee amount related messages
-feeamount.label=Inschrijvings bedrag
-feeamount.multiple.label=Inschrijvings bedragen
+feeamount.label=Vergoedings bedrag
+feeamount.multiple.label=Vergoedings bedragen
 feeamount.enddate.label=Eind datum
 feeamount.numdaysstart.label=Aantal dagen start
 feeamount.numdaysend.label=Aantal dagen eind
 feeamount.numdays.label=Aantal dagen
-feeamount.feeamount.label=Inschrijvings bedrag
+feeamount.feeamount.label=Vergoedings bedrag
+
+# Participant state related messages
+participantstate.label=Deelnemer status
+participantstate.multiple.label=Deelnemer statussen
+participantstate.state.label=Status
