Updated participant pages and session update page

--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -30,6 +30,7 @@ default.not.deleted.message={0} kon niet worden verwijderd
 default.not.found.message={0} met id {1} kon niet worden gevonden
 default.optimistic.locking.failure=Een andere gebruiker heeft deze {0} al gewijzigd
 default.successful.message=Opslaan was succesvol!
+default.empty.message=Geen items om weer te geven!
 
 default.home.label=Home
 default.welcome.label=Welkom
