--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -30,6 +30,7 @@ default.not.deleted.message={0} could not be deleted
 default.not.found.message={0} not found with id {1}
 default.optimistic.locking.failure=Another user has updated this {0} while you were editing
 default.successful.message=Saving was successful!
+default.empty.message=No items to display!
 
 default.home.label=Home
 default.welcome.label=Welcome
