Updated sessions edit page, fixed some minor issues and added comments

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -27,7 +27,7 @@ default.created.message={0} is created
 default.updated.message={0} is updated
 default.deleted.message={0} is deleted
 default.not.deleted.message={0} could not be deleted
-default.not.found.message={0} not found with id {1}
+default.not.found.message={0} could not be found
 default.optimistic.locking.failure=Another user has updated this {0} while you were editing
 default.successful.message=Saving was successful!
 default.empty.message=No items to display!
