Implementation of session planner

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -20,6 +20,7 @@ default.paginate.next=Next
 default.boolean.true=True
 default.boolean.false=False
 default.count=Count
+default.goto=Go to
 default.date.format=MMMMM d yyyy
 default.number.format=0
 
@@ -29,19 +30,24 @@ default.deleted.message={0} is deleted
 default.not.deleted.message={0} could not be deleted
 default.not.found.message={0} could not be found
 default.optimistic.locking.failure=Another user has updated this {0} while you were editing
-default.successful.message=Saving was successful!
-default.empty.message=No items to display!
+default.successful.message=Saving was successful
+default.not.allowed.message=Unfortunatly this is not allowed
+
+default.search.empty.message=No items to display
+default.search.nothing.found.message=Nothing found
+default.search.help.message=Fill out a search request
 
 default.home.label=Home
 default.welcome.label=Welcome
 default.all.label=All
 default.list.label={0} list
-default.add.label=Add new {0}
+default.add.label=Add {0}
 default.new.label=New {0}
 default.create.label=Create {0}
 default.show.label=Show {0}
 default.edit.label=Edit {0}
 default.overview.label={0} overview
+default.plan.label=Plan {0}
 
 default.enabled.label=Visible
 default.deleted.label=Delete
@@ -118,13 +124,23 @@ search.for.address=Address
 user.label=User
 user.multiple.label=Users
 user.email.label=Email
-user.fullName.label=Full Name
-user.institute.label=Institute
+user.lastname.label=Last name
+user.firstname.label=First name
+user.gender.label=Gender
+user.address.label=Address
+user.city.label=City
 user.country.label=Country
 user.language.label=Language
 user.password.label=Password
-user.encryptedPasswordAgain.label=Password again
+user.passwordagain.label=Password again
 user.password.nomatch=The passwords are not equal.
+user.phone.label=Phone
+user.fax.label=Fax
+user.mobile.label=Mobile phone
+user.organisation.label=Organisation
+user.department.label=Department
+user.extrainfo.label=Extra information
+user.dateadded.label=Date added
 
 # Event related messages
 event.label=Event
@@ -190,6 +206,7 @@ session.multiple.label=Sessions
 session.code.label=Code
 session.name.label=Name
 session.comment.label=Comment
+session.sessionparticipants.label=Participants in session
 
 # Fee state related messages
 feestate.label=Fee state
@@ -210,3 +227,41 @@ feeamount.feeamount.label=Fee amount
 participantstate.label=Participant state
 participantstate.multiple.label=Participant states
 participantstate.state.label=State
+
+# Participant date related messages
+participantdate.label=Participant
+participantdate.multiple.label=Participants
+participantdate.state.label=Current state
+participantdate.feestate.label=Current fee state
+participantdate.dateadded.label=Event date added
+participantdate.invitationletter.label=Inventation letter requested
+participantdate.invitationlettersent.label=Inventation letter sent
+participantdate.inventationletter.label=Inventation letter
+participantdate.lowerfeerequested.label=Lower fee requested
+participantdate.lowerfeeanswered.label=Lower fee answered
+participantdate.lowerfee.label=Lower fee
+participantdate.lowerfeetext.label=Lower fee text
+participantdate.registrationinfo.label=Registration info
+participantdate.personalinfo.label=Personal info
+participantdate.extra.label=Extra
+participantdate.attendance.label=Attendance
+participantdate.volunteering.label=Volunteering
+participantdate.volunteering.select.label=Would like to be
+participantdate.volunteering.add.label=as volunteer
+participantdata.would.like.to.add.message=This participant is not registered for {0}. Would you like to add this participant?
+
+# Paper related messages
+paper.label=Paper
+paper.multiple.label=Papers
+paper.title.label=Title
+paper.coauthors.label=Co-authors
+paper.abstr.label=Abstract
+paper.comment.label=Additional comments
+paper.networkproposal.label=Network proposal
+paper.sessionproposal.label=Session proposal
+paper.proposaldescription.label=Proposal description
+paper.state.label=Paper state
+paper.file.label=Uploaded paper
+paper.file.upload.label=Upload paper
+paper.equipmentcomment.label=Equipment comment
+paper.networkssessionsinfo.label=Networks & Sessions information
