--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -20,6 +20,7 @@ default.paginate.next=Volgende
 default.boolean.true=Ja
 default.boolean.false=Nee
 default.count=Teller
+default.goto=Ga naar
 default.date.format=d MMMMM yyyy
 default.number.format=0
 
@@ -29,8 +30,12 @@ default.deleted.message={0} is verwijderd
 default.not.deleted.message={0} kon niet worden verwijderd
 default.not.found.message={0} kon niet worden gevonden
 default.optimistic.locking.failure=Een andere gebruiker heeft deze {0} al gewijzigd
-default.successful.message=Opslaan was succesvol!
-default.empty.message=Geen items om weer te geven!
+default.successful.message=Opslaan was succesvol
+default.not.allowed.message=Helaas is dit niet toegestaan
+
+default.search.empty.message=Geen items om weer te geven
+default.search.nothing.found.message=Niks gevonden
+default.search.help.message=Vul een zoek opdracht in
 
 default.home.label=Home
 default.welcome.label=Welkom
@@ -42,6 +47,7 @@ default.create.label=Invoeren {0}
 default.show.label=Details {0}
 default.edit.label=Wijzig {0}
 default.overview.label={0} overzicht
+default.plan.label=Plan {0}
 
 default.enabled.label=Zichtbaar
 default.deleted.label=Verwijderen
@@ -111,13 +117,23 @@ menu.logout=Uitloggen
 user.label=Gebruiker
 user.multiple.label=Gebruikers
 user.email.label=Email
-user.fullName.label=Volledige naam
-user.institute.label=Instituut
+user.lastname.label=Achternaam
+user.firstname.label=Voornaam
+user.gender.label=Geslacht
+user.address.label=Adres
+user.city.label=Stad
 user.country.label=Land
 user.language.label=Taal
 user.password.label=Wachtwoord
-user.encryptedPasswordAgain.label=Wachtwoord nogmaals
-user.password.nomatch=The wachtwoorden zijn niet hetzelfde.
+user.passwordagain.label=Wachtwoord nogmaals
+user.password.nomatch=De wachtwoorden zijn niet hetzelfde.
+user.phone.label=Telefoon
+user.fax.label=Fax
+user.mobile.label=Mobiel nummer
+user.organisation.label=Organisatie
+user.department.label=Afdeling
+user.extrainfo.label=Extra informatie
+user.dateadded.label=Datum toegevoegd
 
 # Event related messages
 event.label=Evenement
@@ -184,6 +200,7 @@ session.multiple.label=Sessies
 session.code.label=Code
 session.name.label=Naam
 session.comment.label=Commentaar
+session.sessionparticipants.label=Participants in sessie
 
 # Fee state related messages
 feestate.label=Vergoedings status
@@ -204,3 +221,41 @@ feeamount.feeamount.label=Vergoedings bedrag
 participantstate.label=Deelnemer status
 participantstate.multiple.label=Deelnemer statussen
 participantstate.state.label=Status
+
+# Participant date related messages
+participantdate.label=Participant
+participantdate.multiple.label=Participants
+participantdate.state.label=Huidige status
+participantdate.feestate.label=Huidige vergoedings status
+participantdate.dateadded.label=Evenement datum toegevoegd
+participantdate.invitationletter.label=Uitnodigings brief aangevraagd
+participantdate.invitationlettersent.label=Uitnodigings brief verzonden
+participantdate.inventationletter.label=Uitnodigings brief
+participantdate.lowerfeerequested.label=Lagere vergoeding aangevraagd
+participantdate.lowerfeeanswered.label=Lagere vergoeding beantwoord
+participantdate.lowerfee.label=Lagere vergoeding
+participantdate.lowerfeetext.label=Lagere vergoeding tekst
+participantdate.registrationinfo.label=Registratie info
+participantdate.personalinfo.label=Persoonlijke info
+participantdate.extra.label=Extra
+participantdate.attendance.label=Aaanwezigheid
+participantdate.volunteering.label=Vrijwilliger mogelijkheden
+participantdate.volunteering.select.label=Zou willen zijn
+participantdate.volunteering.add.label=als vrijwilliger
+participantdata.would.like.to.add.message=Deze participant is nog niet geregistreerd voor {0}. Wilt u deze participant toevoegen?
+
+# Paper related messages
+paper.label=Document
+paper.multiple.label=Documenten
+paper.title.label=Titel
+paper.coauthors.label=Co-auteurs
+paper.abstr.label=Korte inhoud
+paper.comment.label=Overig commentaar
+paper.networkproposal.label=Netwerk voorstel
+paper.sessionproposal.label=Sessie voorstel
+paper.proposaldescription.label=Voorstel beschrijving
+paper.state.label=Document status
+paper.file.label=Geüploade document
+paper.file.upload.label=Upload document
+paper.equipmentcomment.label=Apparatuur commentaar
+paper.networkssessionsinfo.label=Netwerken & Sessies informatie
