Finished session planner, added email template / code domain classes and dynamic pages and fixed several minor bug fixes

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -31,7 +31,7 @@ default.not.deleted.message={0} could not be deleted
 default.not.found.message={0} could not be found
 default.optimistic.locking.failure=Another user has updated this {0} while you were editing
 default.successful.message=Saving was successful
-default.not.allowed.message=Unfortunatly this is not allowed
+default.not.allowed.message=Unfortunately this is not allowed
 
 default.search.empty.message=No items to display
 default.search.nothing.found.message=Nothing found
@@ -265,3 +265,21 @@ paper.file.label=Uploaded paper
 paper.file.upload.label=Upload paper
 paper.equipmentcomment.label=Equipment comment
 paper.networkssessionsinfo.label=Networks & Sessions information
+
+# Email code related messages
+emailcode.label=Email code
+emailcode.multiple.label=Email codes
+emailcode.code.label=Code
+emailcode.description.label=Description
+emailcode.groovyscript.label=Groovy script
+
+# Email code related messages
+emailtemplate.label=Email template
+emailtemplate.multiple.label=Email templates
+emailtemplate.usedby.label=Used by
+emailtemplate.subject.label=Subject
+emailtemplate.body.label=Body
+emailtemplate.sender.label=Sender
+emailtemplate.comment.label=Comment
+emailtemplate.testemail.label=Send test email to
+emailtemplate.testaftersave.label=Test email after save
