--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -259,3 +259,21 @@ paper.file.label=Geüploade document
 paper.file.upload.label=Upload document
 paper.equipmentcomment.label=Apparatuur commentaar
 paper.networkssessionsinfo.label=Netwerken & Sessies informatie
+
+# Email code related messages
+emailcode.label=E-mail code
+emailcode.multiple.label=E-mail codes
+emailcode.code.label=Code
+emailcode.description.label=Beschrijving
+emailcode.groovyscript.label=Groovy script
+
+# Email code related messages
+emailtemplate.label=E-mail sjabloon
+emailtemplate.multiple.label=E-mail sjablonen
+emailtemplate.usedby.label=Gebruikt door
+emailtemplate.subject.label=Onderwerp
+emailtemplate.body.label=Bericht
+emailtemplate.sender.label=Afzender
+emailtemplate.comment.label=Commentaar
+emailtemplate.testemail.label=Verstuur test e-mail naar
+emailtemplate.testaftersave.label=Na opslaan e-mail testen
