Fixed issues: - Move settings from the application to the settings table in the database - To think about: Changing language should affect language of user in db - To think about: Localized dates in forms - Modify Export Data CSV XML ... row - Show room equipment - Show weekday above session date time

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -22,6 +22,7 @@ default.boolean.false=False
 default.count=Count
 default.goto=Go to
 default.date.format=MMMMM d yyyy
+default.date.form.format=MM/dd/yyyy
 default.number.format=0
 
 default.created.message={0} is created
@@ -120,6 +121,18 @@ search.for.organisation=Organisation
 search.for.name=Name
 search.for.address=Address
 
+# Settings related messages
+setting.label=Setting
+setting.multiple.label=Settings
+setting.property.label=Property
+setting.value.label=Value
+
+# Requestmap related messages
+requestmap.label=Request map
+requestmap.multiple.label=Request maps
+requestmap.url.label=URL
+requestmap.configattribute.label=Config attribute
+
 # User related messages
 user.label=User
 user.multiple.label=Users
@@ -196,6 +209,7 @@ room.comment.label=Comments
 # Equipment related messages
 equipment.label=Equipment
 equipment.multiple.label=Equipment
+equipment.code.label=Code
 equipment.equipment.label=Equipment
 equipment.description.label=Description
 equipment.imageurl.label=Image URL
