--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -22,6 +22,7 @@ default.boolean.false=Nee
 default.count=Teller
 default.goto=Ga naar
 default.date.format=d MMMMM yyyy
+default.date.form.format=dd-MM-yyyy
 default.number.format=0
 
 default.created.message={0} is ingevoerd
@@ -113,6 +114,23 @@ menu.personalpage=Persoonlijke pagina
 menu.usersoverview=Gebruikers overzicht
 menu.logout=Uitloggen
 
+#Search related messages
+search.for.organisation=Organisatie
+search.for.name=Naam
+search.for.address=Adres
+
+# Settings related messages
+setting.label=Instelling
+setting.multiple.label=Instellingen
+setting.property.label=Eigenschap
+setting.value.label=Waarde
+
+# Requestmap related messages
+requestmap.label=Verzoek
+requestmap.multiple.label=Verzoek
+requestmap.url.label=URL
+requestmap.configattribute.label=Configuratie waarde
+
 # User related messages
 user.label=Gebruiker
 user.multiple.label=Gebruikers
@@ -190,6 +208,7 @@ room.comment.label=Commentaar
 # Equipment related messages
 equipment.label=Apparatuur
 equipment.multiple.label=Apparatuur
+equipment.code.label=Code
 equipment.equipment.label=Apparatuur
 equipment.description.label=Beschrijving
 equipment.imageurl.label=Afbeelding URL
